# jay

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  deploy-notes.md  flake.nix  protocols.md  release-notes.md  rustfmt.toml  todo.md
.builds/: build.yml  check-musl.yml  openbsd.yml  test.yml  unit-tests.yml
.github/workflows/: auto-approve-own-prs.yml  check-spv.yml  codegen.yml  docs.yml  nix.yml  publish-page.yml  rustfmt.yml  test.yml  tests.yml  toml-spec.yml
algorithms/: Cargo.toml
algorithms/src/: lib.rs  lut.rs  rect.rs  tf.rs  triangles.rs  windows.rs
book/: AGENTS.md  book.toml
book/src/: SUMMARY.md  cli.md  control-center.md  environment-variables.md  features.md  floating.md  hdr.md  input-modes.md  installation.md  introduction.md  mouse.md  overlays.md  running.md  screen-sharing.md  tiling.md  troubleshooting.md  window-rules.md  workspaces.md
c/: bridge.c
codegen/: Cargo.toml  codegen.sh
codegen/src/: gen_cm_paths.rs  gen_lut.rs  input_event_codes.rs  keysyms.rs  main.rs  phf_generator.rs
compile-shaders/: Cargo.toml
compile-shaders/build-rs/: Cargo.toml
compile-shaders/core/: Cargo.toml
default-config/: Cargo.toml
docs/: config.md  features.md  mouse-interactions.md  setup.md  window-and-client-rules.md
etc/: jay-portals.conf  jay.desktop  jay.portal  org.freedesktop.impl.portal.desktop.jay.service  xdg-desktop-portal-jay.service
i4config/: Cargo.toml
jay-config/: Cargo.toml
jay-config/src/: _private.rs  client.rs  drm.rs  embedded.rs  exec.rs  input.rs  io.rs  lib.rs  logging.rs  macros.rs  status.rs  tasks.rs  theme.rs  timer.rs  video.rs  window.rs  workspace.rs  xwayland.rs
jay-config/src/_private/: client.rs  ipc.rs  logging.rs  string_error.rs
jay-config/src/input/: acceleration.rs  capability.rs  clickmethod.rs  input_event_codes.rs  scrollmethod.rs
jay-config/src/keyboard/: keymap.rs  mod.rs  mods.rs  syms.rs
jay-config/src/keyboard/syms/: generated.rs
jay-proc/: Cargo.toml
jay-proc/src/: drm_object_properties.rs  lib.rs  markers.rs  reset.rs
jay-proc/src/markers/: clone.rs  hash.rs
nix/: packages.nix
qoi/: Cargo.toml
src/: acceptor.rs  allocator.rs  async_engine.rs  backend.rs  backends.rs  bridge.c  buffer_id_device.rs  bugs.rs  cli.rs  client.rs  clientmem.rs  cmm.rs  compositor.rs  config.rs  configurable.rs  control_center.rs  copy_device.rs  cpu_worker.rs  criteria.rs  cursor.rs  cursor_user.rs  damage.rs  dbus.rs  dmabuf_feedback.rs  drm_feedback.rs  edid.rs  egui_adapter.rs  ei.rs  env.rs  evdev.rs  event_loop.rs  eventfd_cache.rs  fixed.rs  fontconfig.rs  forker.rs  format.rs  gfx_api.rs  gfx_apis.rs  globals.rs  icons.rs  (+60 more)
toml-config/: Cargo.toml
toml-config/src/: config.rs  default-config.toml  lib.rs  phf.rs  phf_map.rs  rules.rs  shortcuts.rs  toml.rs
toml-config/src/config/: context.rs  error.rs  extractor.rs  input_event_codes.rs  keycodes.rs  keysyms.rs  parser.rs  parsers.rs  spanned.rs  value.rs
toml-config/src/config/input_event_codes/: generated.rs
toml-config/src/config/keycodes/: generated.rs  tests.rs
toml-config/src/config/parsers/: action.rs  actions.rs  capabilities.rs  clean_logs_older_than.rs  client_match.rs  client_rule.rs  color.rs  color_management.rs  config.rs  connector.rs  connector_match.rs  content_type.rs  coordinate.rs  drm_device.rs  drm_device_match.rs  egui.rs  env.rs  exec.rs  fallback_output_mode.rs  float.rs  focus_history.rs  format.rs  gfx_api.rs  idle.rs  input.rs  input_match.rs  input_mode.rs  keymap.rs  libei.rs  log_level.rs  mark_id.rs  mode.rs  modified_keysym.rs  output.rs  output_match.rs  repeat_rate.rs  session_management.rs  shortcuts.rs  simple_im.rs  status.rs  (+14 more)
toml-config/src/toml/: tests.rs  toml_lexer.rs  toml_parser.rs  toml_span.rs  toml_value.rs
toml-spec/: Cargo.toml
toml-spec/spec/: spec.generated.json  spec.generated.md  spec.yaml  template.md
toml-spec/src/: json_schema.rs  main.rs  markdown.rs  types.rs
wire/: ext_data_control_device_v1.txt  ext_data_control_manager_v1.txt  ext_foreign_toplevel_handle_v1.txt  ext_foreign_toplevel_image_capture_source_manager_v1.txt  ext_foreign_toplevel_list_v1.txt  ext_idle_notification_v1.txt  ext_idle_notifier_v1.txt  ext_image_capture_color_manager_v1.txt  ext_image_capture_source_colors_v1.txt  ext_image_capture_source_v1.txt  ext_image_copy_capture_cursor_session_v1.txt  ext_image_copy_capture_frame_v1.txt  ext_image_copy_capture_manager_v1.txt  ext_image_copy_capture_session_v1.txt  ext_output_image_capture_source_manager_v1.txt  ext_session_lock_manager_v1.txt  ext_session_lock_surface_v1.txt  ext_session_lock_v1.txt  ext_transient_seat_manager_v1.txt  ext_transient_seat_v1.txt  ext_tray_item_v1.txt  ext_tray_v1.txt  ext_workspace_group_handle_v1.txt  ext_workspace_handle_v1.txt  ext_workspace_manager_v1.txt  jay_acceptor_request.txt  jay_client_query.txt  jay_color_management.txt  jay_compositor.txt  jay_damage_tracking.txt  jay_ei_session.txt  jay_ei_session_builder.txt  jay_head_error_v1.txt  jay_head_ext_brightness_info_v1.txt  jay_head_ext_brightness_setter_v1.txt  jay_head_ext_compositor_space_enabler_v1.txt  jay_head_ext_compositor_space_info_v1.txt  jay_head_ext_compositor_space_positioner_v1.txt  jay_head_ext_compositor_space_scaler_v1.txt  jay_head_ext_compositor_space_transformer_v1.txt  (+213 more)
wire-dbus/: org.freedesktop.DBus.Properties.txt  org.freedesktop.DBus.txt  org.freedesktop.impl.portal.RemoteDesktop.txt  org.freedesktop.impl.portal.Request.txt  org.freedesktop.impl.portal.ScreenCast.txt  org.freedesktop.impl.portal.Session.txt  org.freedesktop.login1.Manager.txt  org.freedesktop.login1.Seat.txt  org.freedesktop.login1.Session.txt  org.freedesktop.systemd1.Manager.txt
wire-ei/: ei_button.txt  ei_callback.txt  ei_connection.txt  ei_device.txt  ei_handshake.txt  ei_keyboard.txt  ei_pingpong.txt  ei_pointer.txt  ei_pointer_absolute.txt  ei_scroll.txt  ei_seat.txt  ei_touchscreen.txt
wire-to-xml/: Cargo.toml
wire-xcon/: composite.txt  dri3.txt  present.txt  render.txt  res.txt  xfixes.txt  xinput.txt  xkb.txt  xproto.txt
xml-to-wire/: Cargo.toml
(+1208 files in other folders)
