[package]
name = "jay-compositor"
version = "1.7.0"
edition = "2021"
build = "build/build.rs"
license = "GPL-3.0-only"
description = "The Jay compositor"
repository = "https://github.com/mahkoh/jay"
default-run = "jay"

[[bin]]
name = "jay"
path = "src/main.rs"

[workspace]
members = ["jay-config", "toml-config", "algorithms", "toml-spec"]

[profile.release]
panic = "abort"
debug = "full"

[profile.dev]
panic = "abort"

[dependencies]
jay-config = { version = "1.6.0", path = "jay-config" }
jay-toml-config = { version = "0.8.0", path = "toml-config" }
jay-algorithms = { version = "0.3.0", path = "algorithms" }

uapi = "0.2.13"
thiserror = "1.0.56"
ahash = "0.8.7"
log = { version = "0.4.20", features = ["std"] }
futures-util = "0.3.30"
num-traits = "0.2.17"
num-derive = "0.4.2"
libloading = "0.8.1"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
isnt = "0.1.0"
once_cell = "1.19.0"
rand = "0.8.5"
smallvec = { version = "1.11.1", features = ["const_generics", "const_new", "union"] }
byteorder = "1.5.0"
bincode = "1.3.3"
pin-project = "1.1.4"
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
clap_complete = "4.4.10"
humantime = "2.1.0"
dirs = "5.0.1"
backtrace = "0.3.69"
chrono = "0.4.33"
parking_lot = "0.12.1"
arrayvec = "0.7.4"
indexmap = "2.2.0"
ash = "0.38.0"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
linearize = { version = "0.1.3", features = ["derive"] }
png = "0.17.13"
rustc-demangle = { version = "0.1.24", optional = true }
tracy-client-sys = { version = "0.24.1", features = ["ondemand", "manual-lifetime", "debuginfod"], optional = true }

[build-dependencies]
repc = "0.1.1"
anyhow = "1.0.79"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
shaderc = "0.8.3"
cc = "1.0.86"

#[profile.dev.build-override]
#opt-level = 3

[profile.dev.package."jay-algorithms"]
opt-level = 3

[profile.dev.package."smallvec"]
opt-level = 3

[features]
rc_tracking = []
it = []
tracy = ["dep:tracy-client-sys", "dep:rustc-demangle"]
