[package]
name = "jay-config"
version = "1.6.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Configuration crate for the Jay compositor"
repository = "https://github.com/mahkoh/jay"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
log = "0.4.14"
futures-util = {  version = "0.3.30", features = ["io"] }
uapi = "0.2.12"
thiserror = "1.0.57"
backtrace = "0.3.69"
error_reporter = "1.0.0"
serde_json = "1.0.114"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
