[package]
name = "jay-toml-config"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Internal dependency of the Jay compositor"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
jay-config = { path = "../jay-config" }
log = "0.4.14"
thiserror = "1.0.57"
error_reporter = "1.0.0"
phf = { version = "0.11.2", features = ["macros"] }
indexmap = "2.2.5"
bstr = { version = "1.9.1", default-features = false }
ahash = "0.8.11"

[dev-dependencies]
simplelog = { version = "0.12.2", features = ["test"] }
serde_json = "1.0.114"
walkdir = "2.5.0"
